Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: Impala 2.7.0
-
Fix Version/s: Impala 2.7.0
-
Component/s: Backend
-
Labels:
-
Target Version:
Description
SimdByteSwap::ByteSwap256 in util/bit-util.cc is modified using _attribute_((target("avx2"))).
This attribute will make the compiler generate aligned memory access instructions for the assignment statements. If incoming memory destination address is unaligned, the assignment statements will fail and may cause crash.
Reproducible with select reverse('123456789abcdef0123456789abcdef0');.